--- a/CSLR.html
+++ b/CSLR.html
@@ -45,7 +45,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button-cslr" style="background-image:url('./Images/HOMEPAGE/CSLR-BG.jpg');">
+    <section class="image-text-button cslr" style="background-image:url('./Images/HOMEPAGE/CSLR-BG.jpg');">
         <h3 class=title>Compensation Scheme of Last Resort</h3>
     </section>
 
@@ -160,20 +160,20 @@
 
 
     <section class="project-buttons">
-        <a href="STV.html" class="previous-button">
+        <a href="PAS.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
                 <p>Previous</p>
             </div>
-            <h6 class="top-text">Safe Transport Victoria</h6>
+            <h6 class="top-text">Parramatta Artists Studio</h6>
         </a>
-        <a href="PAS.html" class="next-button">
+        <a href="STV.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
             </div>
-            <h6 class="bottom-line">Parramatta Artists Studios</h6>
+            <h6 class="bottom-line">Safe Transport Victoria</h6>
         </a>
     </section>
 
