--- a/PAS.html
+++ b/PAS.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button-pas" style="background-image:url('./Images/PAS/Group 12462.jpg');">
+    <section class="image-text-button pas" style="background-image:url('./Images/PAS/Group 12462.jpg');">
         <h3 class=title>Parramatta<br>Artists Studios</h3>
     </section>
 
@@ -133,20 +133,20 @@
 
 
     <section class="project-buttons">
-        <a href="CSLR.html" class="previous-button">
+        <a href="freesauce.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
                 <p>Previous</p>
             </div>
-            <h6 class="top-text">Compensation Scheme of Last Resort</h6>
+            <h6 class="top-text">Free Sauce</h6>
         </a>
-        <a href="STV.html" class="next-button">
+        <a href="CSLR.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
             </div>
-            <h6 class="bottom-line">Safe Transport Victoria</h6>
+            <h6 class="bottom-line">Compensation Scheme of Last Resort</h6>
         </a>
     </section>
 
