--- a/index.html
+++ b/index.html
@@ -85,6 +85,25 @@
             </div>
         </a>
         <br>
+        <a href="CSLR.html" class="tile cslr">
+            <h2 class=project-name>Compensation Scheme of Last Resort</h2>
+            <h6>
+                <ul class=project-role>
+                    <li class="list-start">Brand development</li>
+                    <li class="list-follow">UX research</li>
+                    <li class="list-follow">UI design</li>
+                </ul>
+            </h6>
+            <div class="cslr-show-hover">
+                <img src="./Images/HOMEPAGE/HPCSLR.png" alt="Mobile and laptop mockups of the project">
+                <div class="cta">
+                    <h6>View case study<h6>
+                            <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
+                                alt="arrow-next">
+                </div>
+            </div>
+        </a>
+        <br>
         <a href="STV.html" class="tile stv">
             <h2 class=project-name>Safe Transport Victoria</h2>
             <h6>
@@ -103,17 +122,16 @@
             </div>
         </a>
         <br>
-        <a href="CSLR.html" class="tile cslr">
-            <h2 class=project-name>Compensation Scheme of Last Resort</h2>
+        <a href="freesauce.html" class="tile freesauce">
+            <h2 class=project-name>Free Sauce</h2>
             <h6>
                 <ul class=project-role>
                     <li class="list-start">Brand development</li>
-                    <li class="list-follow">UX research</li>
                     <li class="list-follow">UI design</li>
                 </ul>
             </h6>
-            <div class="cslr-show-hover">
-                <img src="./Images/HOMEPAGE/HPCSLR.png" alt="Mobile and laptop mockups of the project">
+            <div class="freesauce-show-hover">
+                <img src="./Images/HOMEPAGE/FS-HP.png" alt="Mobile and laptop mockups of the project">
                 <div class="cta">
                     <h6>View case study<h6>
                             <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
