--- a/STV.html
+++ b/STV.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button-stv" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
+    <section class="image-text-button stv" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
         <h3 class=title>Safe Transport Victoria Boating Safety</h3>
     </section>
 
@@ -136,20 +136,20 @@
 
 
     <section class="project-buttons">
-        <a href="PAS.html" class="previous-button">
+        <a href="CSLR.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
                 <p>Previous</p>
             </div>
-            <h6 class="top-text">Parramatta Artists Studios</h6>
+            <h6 class="top-text">Compensation Scheme of Last Resort</h6>
         </a>
-        <a href="CSLR.html" class="next-button">
+        <a href="freesauce.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
             </div>
-            <h6 class="bottom-line">Compensation Scheme of Last Resort</h6>
+            <h6 class="bottom-line">Free Sauce</h6>
         </a>
     </section>
 
