--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             </p>
         </section>
         <section class="about-right">
-            <p>Psych grad meets creative, I'm passionate about leveraging my understanding of human behaviour and
+            <p>Psychology grad meets creative, I'm passionate about leveraging my understanding of human behaviour and
                 research skills to design user-friendly, intuitive and accessible digital products.
             </p><br>
 
