--- a/freesauce.html
+++ b/freesauce.html
@@ -142,8 +142,8 @@
     </div>
 
     <section class="fs-full-image">
-        <img src="./Images/freesauce/about.jpg" class="fsfull-img">
-        <img src="./Images/freesauce/content.jpg" class="fsfull-img2">
+        <img src="./Images/freesauce/about.jpg" loading="lazy" class="fsfull-img">
+        <img src="./Images/freesauce/content.jpg" loading="lazy" class="fsfull-img2">
     </section>
 
 
