--- a/STV.html
+++ b/STV.html
@@ -45,7 +45,7 @@
     </nav>
 
     <section class="image-text-button stv" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
-        <h3 class=title>Safe Transport Victoria Boating Safety</h3>
+        <h3 class=title>Safe Transport Victoria</h3>
     </section>
 
 
